# mcp-covenant

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  action.yml  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  scorecard.yml
src/: client.rs  diff.rs  error.rs  lib.rs  lint.rs  lockfile.rs  main.rs  protocol.rs  report.rs  sarif.rs
tests/: diff_enum.rs  diff_input.rs  diff_nested_prompts.rs  diff_output.rs  integration.rs  lint_coverage.rs  lockfile_sarif.rs
tests/common/: mod.rs
